# dummy-app

./: .gitignore  Dockerfile  LICENSE  README.md  generateVersion.sh  gunicorn_dev_config.py  pyproject.toml  runDev.sh
.github/workflows/: arc.yaml  ghcr-cleanup.yml  main.yml  pr-closed.yml  test-report.yml
container/: gunicorn_config.py  runApp.sh
helm-dummyapp/: Chart.yaml  values.yaml
helm-dummyapp/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
src/dummy_app/: __init__.py
src/dummy_app/resources/: healthz.py  main.py
src/dummy_app/static/: style.css
src/dummy_app/templates/: main.html
tests/deployment/: test_deployment_integration.py
tests/preview/: pr-23-values.yaml  pr-25-values.yaml
tests/unit/: conftest.py  test_healthz.py  test_main.py
