[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
tag.prefix = "v"
tag.strict = true

[project]
name ="dummy_app"
description = "A minimal app for testing and demoing GitOps processes."
dynamic = ["version"]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "Flask",
    "gunicorn",
    "python-dotenv",
]

[project.optional-dependencies]
all = [
    "pytest",
    "pytest-cov",
]
